--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Innova</a>
-      <div class="phone"><span>Call Today</span>320-123-4321</div>
+      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:85px;vertical-align: top;" src="img/uploads/logo.png"></a>
+      <div style="margin-top: 0px;" class="phone"><span>Eastminster ERIE</span>2320 East Lake Road<br/>Erie, Pennsylvania 16511</div>
     </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="#home" class="page-scroll">Home</a></li>
         <li><a href="#about" class="page-scroll">About</a></li>
         <li><a href="#services" class="page-scroll">Services</a></li>
         <li><a href="#portfolio" class="page-scroll">Projects</a></li>
@@ -65,9 +66,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>Home Construction<br>
-              & Remodeling</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+            <h1>Eastminster ERIE</h1>
+            <p style="font-size: 25px";>"Celebrating, Sharing, & Connecting God's Love with Our Community"</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
@@ -79,10 +79,10 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 col-md-offset-1">
-        <h3>Cost for your home renovation project</h3>
-        <p>Get started today and complete our form to request your free estimate</p>
+        <h3>Thank you for giving to Eastminster ERIE! Your contribution makes a difference!</h3>
+        <p>Let us think about how we may offer our time, our talents, or any other good gifts we have received from the Lord to benefit and further God's will for his creation.</p>
       </div>
-      <div class="col-xs-12 col-md-4 text-center"><a href="#contact" class="btn btn-custom btn-lg page-scroll">Free Estimate</a></div>
+      <div class="col-xs-12 col-md-4 text-center"><a href="#contact" class="btn btn-custom btn-lg page-scroll">Give Now</a></div>
     </div>
   </div>
 </div>
