--- a/index.html
+++ b/index.html
@@ -1,39 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>INNOVA</title>
-<meta name="description" content="">
-<meta name="author" content="">
-
-<!-- Favicons
-    ================================================== -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
-
-<!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
-
-<!-- Stylesheet
-    ================================================== -->
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
-<link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<div id="header"></div>
+<body onload="import()" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
     ==========================================-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -41,7 +7,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:85px;vertical-align: top;" src="img/uploads/logo.png"></a>
+      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:85px;vertical-align: top;" src="img/uploads/logo-transparent-bg.png"></a>
       <div style="margin-top: 0px;" class="phone"><span>Eastminster ERIE</span>2320 East Lake Road<br/>Erie, Pennsylvania 16511</div>
     </div>
     
@@ -53,7 +19,7 @@
         <li><a href="#services" class="page-scroll">Services</a></li>
         <li><a href="#portfolio" class="page-scroll">Projects</a></li>
         <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
-        <li><a href="#contact" class="page-scroll">Contact</a></li>
+        <li><a href="/contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -270,61 +236,74 @@
 <div id="testimonials">
   <div class="container">
     <div class="section-title">
-      <h2>Testimonials</h2>
+      <h2>Our Ministry Team</h2>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/01.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/henry.png" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
+            <div class="testimonial-meta"> Henry J Rafferty CP </div>
+            <p>Pastor</p> 
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/02.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/doug.png" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
+            <div class="testimonial-meta"> Doug Tramontana </div>
+            <p>Music Director</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/03.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/neal.jpeg" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
+            <div class="testimonial-meta"> Neal Durchman </div>
+            <p>Pianist/Organist
+
+            </p>
           </div>
         </div>
       </div>
       <div class="row"> </div>
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/04.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/patti.png" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
+            <div class="testimonial-meta"> Patti Kuna CP </div>
+            <p>Pianist/Organist
+
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/05.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/mary.jpeg" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
+            <div class="testimonial-meta"> Mary Walters </div>
+            <p>Janitorial Staff</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/06.jpg" alt=""> </div>
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/tam.jpeg" alt=""> </div>
           <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
+            <div class="testimonial-meta"> Tamer Fahmy </div>
+            <p>Audio/Video Engineer </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="testimonial">
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/tom.jpeg" alt=""> </div>
+          <div class="testimonial-content">
+            <div class="testimonial-meta"> Tom Clauser </div>
+            <p>Audio/Video Engineer </p>
           </div>
         </div>
       </div>
@@ -404,5 +383,12 @@
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
+
+<script>
+  $(function(){
+      $("#header").load("header.html"); 
+      $("#footer").load("footer.html"); 
+  });
+</script>
 </body>
 </html>
