--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script>
-  $(function(){
+  $(import(){
       $("#header").load("header.html"); 
       $("#footer").load("footer.html"); 
   });
