--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script>
-  $(import(){
+  $(function(){
       $("#header").load("header.html"); 
       $("#footer").load("footer.html"); 
   });
@@ -383,7 +382,7 @@
     <p>&copy; 2017 INNOVA. Design by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
   </div>
 </div>
-
+<script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script type="text/javascript" src="js/bootstrap.js"></script> 
 <script type="text/javascript" src="js/SmoothScroll.js"></script> 
 <script type="text/javascript" src="js/nivo-lightbox.js"></script> 
