--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div id="header"></div>
-<body onload="import()" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
     ==========================================-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -389,5 +389,6 @@
       $("#footer").load("footer.html"); 
   });
 </script>
+
 </body>
 </html>
