--- a/index.html
+++ b/index.html
@@ -93,16 +93,22 @@
       <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <h2>Who We Are</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <h3>Why Choose Us?</h3>
+          <h2>Christmas Eve Candlelight Service</h2>
+          <p>Communion will be served 
+
+            & we will sing well known Christmas hymns</p>
+          <h3>When:</h3>
           <div class="list-style">
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <ul>
-                <li>Years of Experience</li>
-                <li>Fully Insured</li>
-                <li>Cost Control Experts</li>
-                <li>100% Satisfaction Guarantee</li>
+                <li>Saturday, December 24, 2022 at 5:30 PM</li>
+                  <a title="Erie DJ Company YouTube" href="https://www.youtube.com/channel/UCJdV0_IRLhKQ_AUNGinJ1Kw" target="_blank" class="p-2">
+                    <span style="font-size:30px;color:#FF0000;" class="fa fa-youtube-play"></span>
+                    In-Person / FB Live / Zoom
+                  </a>
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank" class="p-2">
+                    <p>FB Live</p><span style="font-size:30px;color:#4267B2;" class="fa fa-facebook"></span>
+                  </a>
               </ul>
             </div>
             <div class="col-lg-6 col-sm-6 col-xs-12">
