--- a/index.html
+++ b/index.html
@@ -90,37 +90,68 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6"> 
+        <img id="about-img" src="img/uploads/christmas-eve.jpeg" class="img-responsive" alt=""> 
+      </div>
       <div class="col-xs-12 col-md-6">
-        <div class="about-text">
-          <h2>Christmas Eve Candlelight Service</h2>
-          <p>Communion will be served 
-
-            & we will sing well known Christmas hymns</p>
+        <div style="text-align: center;" class="about-text">
+          <h2>Christmas Eve <br />Candlelight Service</h2>
+          <p>Communion will be served & we will sing well known Christmas hymns.</p>
           <h3>When:</h3>
           <div class="list-style">
-            <div class="col-lg-6 col-sm-6 col-xs-12">
-              <ul>
-                <li>Saturday, December 24, 2022 at 5:30 PM</li>
-                  <a title="Erie DJ Company YouTube" href="https://www.youtube.com/channel/UCJdV0_IRLhKQ_AUNGinJ1Kw" target="_blank" class="p-2">
-                    <span style="font-size:30px;color:#FF0000;" class="fa fa-youtube-play"></span>
-                    In-Person / FB Live / Zoom
+            <div class="col-lg-12 col-sm-6 col-xs-12">
+              Saturday, December 24, 2022 at 5:30 PM
+              <br /><br /><br />
+              <div class="row" style="justify-content: center;text-align: center;">
+                <div style="padding-right:35px;display:inline-block;">
+                  <a title="Erie DJ Company Zoom" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
+                    <img src="img/uploads/zoom-live.png" style="width:125px">
                   </a>
-                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank" class="p-2">
-                    <p>FB Live</p><span style="font-size:30px;color:#4267B2;" class="fa fa-facebook"></span>
+                </div>
+                <div style="display:inline-block;">
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank">
+                    <img src="img/uploads/facebook-live.png" style="width:125px">
                   </a>
-              </ul>
-            </div>
-            <div class="col-lg-6 col-sm-6 col-xs-12">
-              <ul>
-                <li>Free Consultation</li>
-                <li>Satisfied Customers</li>
-                <li>Project Management</li>
-                <li>Affordable Pricing</li>
-              </ul>
+                </div>
+              </div>  
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- About Section -->
+<div id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <div style="text-align: center;" class="about-text">
+          <h2>Christmas Day Service</h2>
+          <p>Communion will be served & we will sing well known Christmas hymns.</p>
+          <h3>When:</h3>
+          <div class="list-style">
+            <div class="col-lg-12 col-sm-6 col-xs-12">
+              Sunday, December 25, 2022 at 10:30 AM
+              <br /><br /><br />
+              <div class="row" style="justify-content: center;text-align: center;">
+                <div style="padding-right:35px;display:inline-block;">
+                  <a title="Erie DJ Company Zoom" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
+                    <img src="img/uploads/zoom-live.png" style="width:125px">
+                  </a>
+                </div>
+                <div style="display:inline-block;">
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank">
+                    <img src="img/uploads/facebook-live.png" style="width:125px">
+                  </a>
+                </div>
+              </div>  
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6"> 
+        <img id="about-img" src="img/uploads/christmas-day.jpeg" class="img-responsive" alt=""> 
       </div>
     </div>
   </div>
