--- a/index.html
+++ b/index.html
@@ -444,7 +444,13 @@
 <!-- Footer Section -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2017 INNOVA. Design by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+    <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster ERIE
+      <br />
+      <a href="/terms-and-conditions">Terms & Conditions</a> | <a href="/privacy-policy">Privacy Policy</a>
+      <br />
+      Designed by <a href="https://www.epykwebsites.com">EPYK Websites</a>
+  
+  </p>
   </div>
 </div>
 <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
@@ -456,12 +462,5 @@
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
-<script>
-  $(function(){
-      $("#header").load("header.html"); 
-      $("#footer").load("footer.html"); 
-  });
-</script>
-
 </body>
 </html>
