--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <!-- Favicons
     ================================================== -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="img/favicon_io/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/favicon_io/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/favicon_io/apple-touch-icon-114x114.png">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -96,12 +96,16 @@
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
           <h2>Christmas Eve <br />Candlelight Service</h2>
-          <p>Communion will be served & we will sing well known Christmas hymns.</p>
+          <ul style="font-size: 14pt;">
+            <li>Communion will be served</li>
+            <li>Singing well known Christmas hymns.</li>
+          </ul>
+          <br />
           <h3>When:</h3>
           <div class="list-style">
-            <div class="col-lg-12 col-sm-6 col-xs-12">
+            <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               Saturday, December 24, 2022 at 5:30 PM
-              <br /><br /><br />
+              <br /><br />
               <div class="row" style="justify-content: center;text-align: center;">
                 <div style="padding-right:35px;display:inline-block;">
                   <a title="Erie DJ Company Zoom" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
@@ -128,10 +132,14 @@
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
           <h2>Christmas Day Service</h2>
-          <p>Communion will be served & we will sing well known Christmas hymns.</p>
+          <ul style="font-size: 14pt;">
+            <li>Communion will be served</li>
+            <li>Singing well known Christmas hymns.</li>
+          </ul>
+          <br />
           <h3>When:</h3>
           <div class="list-style">
-            <div class="col-lg-12 col-sm-6 col-xs-12">
+            <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               Sunday, December 25, 2022 at 10:30 AM
               <br /><br /><br />
               <div class="row" style="justify-content: center;text-align: center;">
