--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>Eastminster ERIE</h1>
-            <p style="font-size: 25px";>"Celebrating, Sharing, & Connecting God's Love with Our Community"</p>
+            <h1 id="intro-name">Eastminster ERIE</h1>
+            <p id="intro-desc">"Celebrating, Sharing, & Connecting God's Love with Our Community"</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
                   </a>
                 </div>
                 <div style="display:inline-block;">
-                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank">
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/100064621632291/live" target="_blank">
                     <img src="img/uploads/facebook-live.png" style="width:125px">
                   </a>
                 </div>
@@ -149,7 +149,7 @@
                   </a>
                 </div>
                 <div style="display:inline-block;">
-                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eriedjco/" target="_blank">
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/100064621632291/live" target="_blank">
                     <img src="img/uploads/facebook-live.png" style="width:125px">
                   </a>
                 </div>
@@ -168,7 +168,7 @@
 <div id="services">
   <div class="container">
     <div class="section-title">
-      <h2>Our Services</h2>
+      <h2>Our Mission: Faith in Motion</h2>
     </div>
     <div class="row">
       <div class="col-md-4">
@@ -393,33 +393,13 @@
 <div id="contact">
   <div class="container">
     <div class="col-md-8">
-      <div class="row">
-        <div class="section-title">
-          <h2>Get In Touch</h2>
-          <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
-        </div>
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-            <p class="help-block text-danger"></p>
-          </div>
-          <div id="success"></div>
-          <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
-        </form>
+      <div class="social">
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        </ul>
       </div>
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
@@ -437,30 +417,24 @@
     </div>
     <div class="col-md-12">
       <div class="row">
+        
+      </div>
+      <div class="row">
         <div class="social">
-          <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          </ul>
+          <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster ERIE
+            <br />
+            <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+            <br />
+            Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
+        
+        </p>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- Footer Section -->
-<div id="footer">
-  <div class="container text-center">
-    <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster ERIE
-      <br />
-      <a href="/terms-and-conditions">Terms & Conditions</a> | <a href="/privacy-policy">Privacy Policy</a>
-      <br />
-      Designed by <a href="https://www.epykwebsites.com">EPYK Websites</a>
-  
-  </p>
-  </div>
-</div>
+
 <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
 
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
