--- a/index.html
+++ b/index.html
@@ -393,13 +393,8 @@
 <div id="contact">
   <div class="container">
     <div class="col-md-8">
-      <div class="social">
-        <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        </ul>
+      <div class="contact-item">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11832.277767051346!2d-80.0361084!3d42.1488008!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x924e2683dc09b8fd!2sEastminster%20Presbyterian%20Church!5e0!3m2!1sen!2sus!4v1669817414920!5m2!1sen!2sus" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
@@ -416,9 +411,7 @@
       </div>
     </div>
     <div class="col-md-12">
-      <div class="row">
-        
-      </div>
+      
       <div class="row">
         <div class="social">
           <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster ERIE
