Add Contact info

--- a/index.html
+++ b/index.html
@@ -400,14 +400,14 @@
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
         <h4>Contact Info</h4>
-        <p><span>Address</span>4321 California St,<br>
-          San Francisco, CA 12345</p>
+        <p><span>Address</span>2320 East Lake Road<br />
+          Erie, Pennsylvania 16511</p>
       </div>
       <div class="contact-item">
-        <p><span>Phone</span> +1 123 456 1234</p>
+        <p><span>Phone</span> (412) 361-7788</p>
       </div>
       <div class="contact-item">
-        <p><span>Email</span> info@company.com</p>
+        <p><span>Email</span> FaithInMotion@eastminsterERIE.com</p>
       </div>
     </div>
     <div class="col-md-12">
