--- a/index.html
+++ b/index.html
@@ -199,6 +199,21 @@
                   
                 document.write(sundayDt);
               </script> @ 10:30am
+              <br /><br />
+              <div style="text-align: center;" class="about-text"><h3>Worship Online:</h3></div>
+              <br />
+              <div class="row" style="justify-content: center;text-align: center;">
+                <div style="padding-right:35px;display:inline-block;">
+                  <a title="Erie DJ Company Zoom" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
+                    <img src="img/uploads/zoom-live.png" style="width:125px">
+                  </a>
+                </div>
+                <div style="display:inline-block;">
+                  <a title="Erie DJ Company Facebook" href="https://www.facebook.com/100064621632291/live" target="_blank">
+                    <img src="img/uploads/facebook-live.png" style="width:125px">
+                  </a>
+                </div>
+              </div>  
             </div>
           </div>
         </div>
