--- a/index.html
+++ b/index.html
@@ -277,37 +277,37 @@
       <h2>Our Mission: Faith in Motion</h2>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-23>
         <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>New Home Construction</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>COMMUNITY STARTS IN THE SHARING GARDEN</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Showing Our Love</b></p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Home Additions</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3>WESLEYVILLE FOODBANK</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br /><b>Supporting  Our Community</b></p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Bathroom Remodels</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>KIDS FOR CHRIST</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Exercising our Faith</b></p>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>Kitchen Remodels</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+          <h3>PRAYER SHAWL MINISTRY</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Comforting Our Community</b></p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-5.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Windows & Doors</h3>
