--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
         <div class="service-desc">
-          <h3>COMMUNITY STARTS IN THE SHARING GARDEN</h3>
+          <h3>SHARING GARDEN</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Showing Our Love</b></p>
         </div>
       </div>
@@ -298,27 +298,11 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Exercising our Faith</b></p>
         </div>
       </div>
-    </div>
-    <div class="row">
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>PRAYER SHAWL MINISTRY</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Comforting Our Community</b></p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="service-media"> <img src="img/services/service-5.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>Windows & Doors</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/services/service-6.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>Decks & Porches</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
         </div>
       </div>
     </div>
