--- a/index.html
+++ b/index.html
@@ -279,30 +279,33 @@
     <div class="row">
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
-        <div class="service-desc">
+        <div style="text-align:center" class="service-desc">
           <h3>SHARING GARDEN</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Showing Our Love</b></p>
+          <br /><p><b>Showing Our Love</b></p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
-        <div class="service-desc">
+        <div style="text-align:center" class="service-desc">
           <h3>WESLEYVILLE FOODBANK</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br /><b>Supporting  Our Community</b></p>
+          <br />
+          <p><b>Supporting  Our Community</b></p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
-        <div class="service-desc">
+        <div style="text-align:center" class="service-desc">
           <h3>KIDS FOR CHRIST</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Exercising our Faith</b></p>
+          <br />
+          <p><b>Exercising our Faith</b></p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
-        <div class="service-desc">
+        <div style="text-align:center" class="service-desc">
           <h3>PRAYER SHAWL MINISTRY</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.<br /><b>Comforting Our Community</b></p>
+          <br />
+          <p><b>Comforting Our Community</b></p>
         </div>
       </div>
     </div>
