--- a/contact.html
+++ b/contact.html
@@ -59,80 +59,48 @@
     <!-- /.navbar-collapse --> 
   </div>
 </nav>
-<!-- Header -->
-<header id="header">
-  <div class="intro">
-    <div class="overlay">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>Eastminster ERIE</h1>
-            <p style="font-size: 25px";>"Celebrating, Sharing, & Connecting God's Love with Our Community"</p>
-            <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
 
 <!-- Contact Section -->
 <div id="contact">
   <div class="container">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="section-title">
-          <h2>Get In Touch</h2>
-          <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
-        </div>
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-            <p class="help-block text-danger"></p>
-          </div>
-          <div id="success"></div>
-          <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
-        </form>
-      </div>
-    </div>
-    <div class="col-md-5 col-md-offset-1 contact-info">
+    <div class="col-md-8">
       <div class="contact-item">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11832.277767051346!2d-80.0361084!3d42.1488008!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x924e2683dc09b8fd!2sEastminster%20Presbyterian%20Church!5e0!3m2!1sen!2sus!4v1669817414920!5m2!1sen!2sus" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
+    <div class="col-md-3 col-md-offset-1 contact-info">
+      <div class="contact-item">
+        <h4>Contact Info</h4>
+        <p><span>Address</span>2320 East Lake Road<br />
+          Erie, Pennsylvania 16511</p>
+      </div>
+      <div class="contact-item">
+        <p><span>Phone</span> (412) 361-7788</p>
+      </div>
+      <div class="contact-item">
+        <p><span>Email</span> FaithInMotion@eastminsterERIE.com</p>
+      </div>
+    </div>
     <div class="col-md-12">
+      
       <div class="row">
         <div class="social">
-          <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          </ul>
+          <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster ERIE
+            <br />
+            <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+            <br />
+            Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
+        
+        </p>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- Footer Section -->
-<div id="footer">
-  <div class="container text-center">
-    <p>&copy; 2017 INNOVA. Design by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
-  </div>
-</div>
+
+<div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
+
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script type="text/javascript" src="js/bootstrap.js"></script> 
 <script type="text/javascript" src="js/SmoothScroll.js"></script> 
