--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3>Thank you for giving to Eastminster ERIE! Your contribution makes a difference!</h3>
         <p>Let us think about how we may offer our time, our talents, or any other good gifts we have received from the Lord to benefit and further God's will for his creation.</p>
       </div>
-      <div class="col-xs-12 col-md-4 text-center"><a href="#contact" class="btn btn-custom btn-lg page-scroll">Give Now</a></div>
+      <div class="col-xs-12 col-md-4 text-center"><a target="_blank" href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="btn btn-custom btn-lg page-scroll">Give Now</a></div>
     </div>
   </div>
 </div>
@@ -432,7 +432,6 @@
 
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script type="text/javascript" src="js/bootstrap.js"></script> 
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
 <script type="text/javascript" src="js/nivo-lightbox.js"></script> 
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
