--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro">
+  <div id="home" class="intro">
     <div class="overlay">
       <div class="container">
         <div class="row">
