--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/uploads/1.jpeg" alt=" "> </div>
         <div style="text-align:center" class="service-desc">
           <h3>SHARING GARDEN</h3>
           <br /><p><b>Showing Our Love</b></p>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/uploads/4.jpeg" alt=" "> </div>
         <div style="text-align:center" class="service-desc">
           <h3>WESLEYVILLE FOODBANK</h3>
           <br />
@@ -293,7 +293,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/uploads/2.jpeg" alt=" "> </div>
         <div style="text-align:center" class="service-desc">
           <h3>KIDS FOR CHRIST</h3>
           <br />
@@ -301,7 +301,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="img/uploads/3.jpeg" alt=" "> </div>
         <div style="text-align:center" class="service-desc">
           <h3>PRAYER SHAWL MINISTRY</h3>
           <br />
