--- a/index.html
+++ b/index.html
@@ -299,11 +299,14 @@
     </div>
   </div>
 </div>
+<div id="fb-root"></div>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpeople%2FEastminster-Presbyterian-Church%2F100064621632291%2F&tabs=timeline&width=0&height=0&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="584" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        
 <!-- YouTube Section -->
 <div id="portfolio">
   <div class="container">
     <div class="section-title">
-      <h2>Follow Us on YouTube</h2>
+      <h2>Follow Us On YouTube</h2>
     </div>
     <div class="row">
       <div class="portfolio-items">
