--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6"> 
-        <img id="about-img" src="img/uploads/online.jpeg" class="img-responsive" alt=""> 
+        <img id="about-img2" src="img/uploads/online.jpeg" class="img-responsive" alt=""> 
       </div>
     </div>
   </div>
