--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
         <li><a href="/worship" class="page-scroll">Worship</a></li>
-        <li><a href="/worship" class="page-scroll">Donate</a></li>
+        <li><a href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="page-scroll">Donate</a></li>
         <li><a href="/contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -313,6 +313,7 @@
 <div style="text-align:center;justify-content:center">
   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 </div>
+
 <!-- Gallery Section -->
 <div id="portfolio">
   <div class="container">
