--- a/index.html
+++ b/index.html
@@ -509,15 +509,15 @@
 
     <!-- Start Social Icons -->
     <div style="text-align:center">
-      <a title="Erie DJ Company YouTube" href="https://www.youtube.com/channel/UCWWO4zkvw4zjN3BUjgjXq2Q"  target="_blank">
+      <a title="Eastminster Presbyterian Church - Erie, PA YouTube" href="https://www.youtube.com/channel/UCWWO4zkvw4zjN3BUjgjXq2Q"  target="_blank">
         <span style="font-size:30px;color:#FF0000;" class="fa fa-youtube-play"></span>
       </a>
 
-      <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eastminster-Presbyterian-Church-180009598709357" target="_blank" style="margin-left:25px;margin-right:25px">
+      <a title="Eastminster Presbyterian Church - Erie, PA Facebook" href="https://www.facebook.com/Eastminster-Presbyterian-Church-180009598709357" target="_blank" style="margin-left:25px;margin-right:25px">
         <span style="font-size:30px;color:#4267B2;" class="fa fa-facebook"></span>
       </a>
         
-      <a title="Erie DJ Company Instagram" href="https://www.instagram.com/eastminstererie/" target="_blank">
+      <a title="Eastminster Presbyterian Church - Erie, PA Instagram" href="https://www.instagram.com/eastminstererie/" target="_blank">
         <span style="font-size:30px;color: transparent;
           background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
           background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
