update worship link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
-        <li><a href="/worship" class="page-scroll">Worship</a></li>
+        <li><a href="#worship" class="page-scroll">Worship</a></li>
         <li><a href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="page-scroll">Donate</a></li>
         <li><a href="/contact" class="page-scroll">Contact</a></li>
       </ul>
@@ -180,7 +180,7 @@
 
 
 <div id="about">
-  <div class="container">
+  <div id="worship" class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6"> 
         <img id="about-img" src="img/uploads/in-person.jpeg" class="img-responsive" alt=""> 
