--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:85px;vertical-align: top;" src="img/uploads/logo-transparent-bg.png"></a>
-      <div style="margin-top: 0px;" class="phone"><span>Eastminster Presbyterian Church </span>2320 East Lake Road<br/>Erie, Pennsylvania 16511</div>
+      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:65px;vertical-align: center;" src="img/uploads/logo-transparent-bg2.png"></a>
     </div>
 
 
@@ -59,7 +58,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
+        <li><a href="/about" class="page-scroll">About</a></li>
         <li><a href="#worship" class="page-scroll">Worship</a></li>
+        <li><a href="/events" class="page-scroll">Events</a></li>
         <li><a href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="page-scroll">Donate</a></li>
         <li><a href="/contact" class="page-scroll">Contact</a></li>
       </ul>
@@ -295,7 +296,7 @@
         <div style="text-align:center" class="service-desc">
           <h3>KIDS FOR CHRIST</h3>
           <br />
-          <p><b>Exercising our Faith</b></p>
+          <p><b>Exercising Our Faith</b></p>
         </div>
       </div>
       <div class="col-md-3">
