--- a/index.html
+++ b/index.html
@@ -317,6 +317,8 @@
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 <!-- Gallery Section -->
