--- a/index.html
+++ b/index.html
@@ -311,15 +311,15 @@
   </div>
 </div>
 
-<div style="text-align:center;justify-content:center">
+<div style="text-align:center">
   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 </div>
 
-
+<div style="text-align:center">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+</div>
 
 <!-- Gallery Section -->
 <div id="portfolio">
