--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 </div>
 
 
-<div id="about">
+<div id="about" style="background-color: white">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6">
@@ -373,15 +373,15 @@
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
-        <h4>Contact Us</h4>
-        <p><span>Address</span>2320 East Lake Road<br />
-          Erie, Pennsylvania 16511</p>
+        <h2>Contact Us</h2>
+        <p><span>Address</span><a href="https://goo.gl/maps/xQM5ENek9GNjMncZ6">2320 East Lake Road<br />
+          Erie, Pennsylvania 16511</a></p>
       </div>
       <div class="contact-item">
-        <p><span>Phone</span> (412) 361-7788</p>
+        <p><span>Phone</span><a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a></p>
       </div>
       <div class="contact-item">
-        <p><span>Email</span> FaithInMotion@eastminsterERIE.com</p>
+        <p><span>Email</span><a target="_top" href="mailto:FaithInMotion@eastminsterERIE.com">FaithInMotion@eastminsterERIE.com</a></p>
       </div>
     </div>
 
@@ -437,7 +437,7 @@
     <div class="row" style="display:flex;justify-content:center">
       <div class="col-xs-12 col-md-6" style="text-align: center;">
         <h3>Welcome to Eastminster Presbyterian Church!</h3>
-        <h6>Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h6>
+        <h4 style="color:white">Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h4>
       </div>
     </div>
   </div>
@@ -513,9 +513,9 @@
       <br /><br />
 
       <ul style="list-style: initial;list-style-position: inside;">
-        <li>Matthew 10:40 says, "Anyone who welcomes you welcomes me, and anyone who welcomes me welcomes the one who sent me."</li>
-        <li>John 21:16 says. "Again Jesus said, 'Simon son of John, do you love me?' He answered, 'Yes, Lord, you know that I love you.' Jesus said, 'Take care of my sheep.'"</li>
-        <li>Ephesians 4:2 says, "Be completely humble and gentle; be patient, bearing with one another in love."</li>
+        <li style="margin-bottom: 13px;">Matthew 10:40 says, "Anyone who welcomes you welcomes me, and anyone who welcomes me welcomes the one who sent me."</li>
+        <li style="margin-bottom: 13px;">John 21:16 says. "Again Jesus said, 'Simon son of John, do you love me?' He answered, 'Yes, Lord, you know that I love you.' Jesus said, 'Take care of my sheep.'"</li>
+        <li style="margin-bottom: 13px;">Ephesians 4:2 says, "Be completely humble and gentle; be patient, bearing with one another in love."</li>
         <li>John 3:34 says "A new command I give you: Love one another. As I have loved you, so you must love one another."</li>
       </ul>
     </div>
