--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
           <h2>Worship With Us</h2>
-            <p>Join us in-person as we celebrate and share in God's love together.</p>
+            <p style="font-size: 12pt">Join us in-person as we celebrate and share in God's love together.</p>
           <div class="list-style">
             <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               <script>
@@ -210,8 +210,11 @@
     <br />
     <br />
     <div class="row" style="justify-content: center;text-align: center;">
-      <div style="display:inline-block;"><h3>Or join us online, right where you are:</h3></div>
-    <div style="padding-right:35px;display:inline-block;">
+      <div style="padding-right:10cqb;display:inline-block;"><h3>Or join us online, right where you are!</h3></div>
+      <div style="padding-right:35px;display:inline-block;">
+        <img src="img/uploads/click-here.png" style="width:125px">
+      </div>
+      <div style="padding-right:35px;display:inline-block;">
       <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
         <img src="img/uploads/zoom-live.png" style="width:125px">
       </a>
@@ -342,7 +345,7 @@
     </div>
     <div class="col-lg-6 section-title">
       <h2>Serve With Us</h2>
-      <p>Our mission is to share God's love with our community. Will you join us?</p>
+      <p style="font-size:12pt">Our mission is to share God's love with our community. Will you join us?</p>
       <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
     </div>
   </div>
@@ -647,7 +650,7 @@
     <div class="row" style="display:flex;justify-content:center">
       <div class="col-xs-12 col-md-6" style="text-align: center;">
         <h3>Welcome to Eastminster Presbyterian Church!</h3>
-        <h6>Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h6>
+        <h4 style="color:white">Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h4>
       </div>
     </div>
   </div>
