remove contact and fix mobile intro pic

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
 
 <style>
   #home {
-   /* background-image: url('images/uploads/logos/home-bg.png');*/
     background-size:cover;
     background-repeat: no-repeat;
+  }
+
+  @media only screen and (max-width: 600px) {
+    #intro {
+      background-image: url('img/uploads/logos/home-bg-mobile.jpeg');*/
+      background-size:contain;
+    }
   }
 </style>    
 </head>
