--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
         <li><a href="/about" class="page-scroll">About Us</a></li>
-        <li><a href="#worship" class="page-scroll">Connect With Us</a></li>
-        <li><a href="/events" class="page-scroll">Worship With Us</a></li>
-        <li><a href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/contact" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
+        <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
+        <li><a href="/connect" class="page-scroll">Serve With Us</a></li>
+        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -699,7 +699,7 @@
 
     <div class="container">
       <div style="display:flex;justify-content:center">
-        <div class="row col-xs-12 col-md-4 col-lg-8">
+        <div class="row col-xs-12 col-md-8 col-lg-8">
           <div style="padding-top:50px" class="col-xs-10 col-md-12 col-lg-12">
             <div style="text-align: center">
               <p style="padding-top:0px;font-size:65pt;font-weight: bold;">FAQs</p>
@@ -788,7 +788,7 @@
     </div>
     <br />
     <br />
-    <div class="row" style="vertical-align: center">
+    <div class="row">
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Food Pantry</h3>
         <p>
