--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
     <br />
     <br />
     <div class="row" style="justify-content: center;text-align: center;">
-      <div style="padding-right:10cqb;display:inline-block;"><h3>Or join us online, right where you are!</h3></div>
+      <div style="padding-right:10cqb;display:inline-block;">
+        <h3>Or join us online, right where you are!</h3>
+      </div>
       <div style="padding-right:35px;display:inline-block;">
         <img src="img/uploads/click-here.png" style="width:125px">
       </div>
@@ -224,12 +226,12 @@
       <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
         <img src="img/uploads/zoom-live.png" style="width:125px">
       </a>
-    </div>
-    <div style="display:inline-block;">
-      <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
-        <img src="img/uploads/facebook-live.png" style="width:125px">
-      </a>
-    </div>
+      </div>
+      <div style="display:inline-block;">
+        <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
+          <img src="img/uploads/facebook-live.png" style="width:125px">
+        </a>
+      </div>
     </div>  
   </div>
 </div>
