--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       background-image: url('img/uploads/logos/home-bg-mobile.jpeg');*/
       background-size:contain;
     }
+    #home {
+      background-image: url('img/uploads/logos/home-bg-mobile.jpeg');*/
+      background-size:contain;
+    }
   }
 </style>    
 </head>
