--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
   @media only screen and (max-width: 600px) {
     #intro {
-      background-image: url('img/uploads/logos/home-bg-mobile.jpeg');*/
-      background-size:contain;
+      background-image: url('img/uploads/logos/home-bg-mobile.jpeg');
     }
     #home {
-      background-image: url('img/uploads/logos/home-bg-mobile.jpeg');*/
       background-size:contain;
     }
   }
