--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   }
 
   @media only screen and (max-width: 600px) {
-    #intro {
+    .intro {
       background-image: url('img/uploads/logos/home-bg-mobile.jpeg');
     }
     #home {
