--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     background-size:cover;
     background-repeat: no-repeat;
   }
+@media only screen and (max-width: 600px) {
+  .intro {
+    background: url(../img/uploads/home-bg-mobile.jpeg) center center no-repeat;
+  }
+  #home {
+    background-size:contain;
+  }
+}
 </style>    
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
