update mobile img

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   }
 @media only screen and (max-width: 600px) {
   .intro {
-    background: url(../img/uploads/home-bg-mobile.jpeg) center center no-repeat;
+    background: url(img/uploads/home-bg-mobile.jpeg);
   }
   #home {
     background-size:contain;
