--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     background: url(img/uploads/home-bg-mobile.jpeg);
   }
   #home {
-    background-size:contain;
+    background-size:cover;
   }
 }
 </style>    
