--- a/index.html
+++ b/index.html
@@ -38,12 +38,18 @@
     background-size:cover;
     background-repeat: no-repeat;
   }
+  #facebook {
+    width:500px
+  }
 @media only screen and (max-width: 600px) {
   .intro {
     background: url(img/uploads/home-bg-mobile.jpeg);
   }
   #home {
     background-size:cover;
+  }
+  #facebook {
+    width:90%;
   }
 }
 </style>    
@@ -742,9 +748,10 @@
 
 <h1 style="background-color: red">Page 4 - Worship With Us</h1>
 
-
-<div style="text-align:center">
-  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<div class="container" style="justify-content:center;display:flex;">
+  <div id="facebook">
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+  </div>
 </div>
 
 <div style="text-align:center">
@@ -795,7 +802,7 @@
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Food Pantry</h3>
         <p>
-          Our congregation participates in the Wesleyville Interfaith Food Pantry (located at 2041 Station Road, Erie, PA 16510). This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
+          Our congregation participates in the Wesleyville Interfaith Food Pantry located at <a href="https://goo.gl/maps/wjpKMbTTbw7M8dRMA" target="_blank"> Station Road, Erie, PA 16510</a>. This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
         </p>
       </div>
       <div class="col-xs-12 col-md-6"> 
@@ -848,7 +855,7 @@
       </div>
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
-          <h2>Worship With Us</h2>
+          <h2>Watch LIVE</h2>
           <div class="list-style">
             <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               Whether you can't make it on time or simply live far away, we welcome you to watch online through the link above. We look forward to seeing you... online or in person!
