--- a/index.html
+++ b/index.html
@@ -223,21 +223,24 @@
     <br />
     <br />
     <div class="row" style="justify-content: center;text-align: center;">
-      <div style="padding-right:10cqb;display:inline-block;">
+      <div class="container col-lg-6">
+      <div style="padding-top:5cqb;display:inline-block;">
         <h3>Or join us online, right where you are!</h3>
-      </div>
-      <div style="padding-right:35px;display:inline-block;">
-        <img src="img/uploads/click-here.png" style="width:125px">
-      </div>
-      <div style="padding-right:35px;display:inline-block;">
-      <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
-        <img src="img/uploads/zoom-live.png" style="width:125px">
-      </a>
-      </div>
-      <div style="display:inline-block;">
-        <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
-          <img src="img/uploads/facebook-live.png" style="width:125px">
+      </div></div>
+      <div class="container col-sm-12 col-lg-6">
+        <div style="padding-right:35px;display:inline-block;">
+          <img src="img/uploads/click-here.png" style="width:125px">
+        </div>
+        <div style="padding-right:35px;display:inline-block;">
+        <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
+          <img src="img/uploads/zoom-live.png" style="width:125px">
         </a>
+        </div>
+        <div style="display:inline-block;">
+          <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
+            <img src="img/uploads/facebook-live.png" style="width:125px">
+          </a>
+        </div>
       </div>
     </div>  
   </div>
@@ -801,7 +804,7 @@
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Food Pantry</h3>
         <p>
-          Our congregation participates in the Wesleyville Interfaith Food Pantry located at <a href="https://goo.gl/maps/wjpKMbTTbw7M8dRMA" target="_blank"> Station Road, Erie, PA 16510</a>. This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
+          Our congregation participates in the Wesleyville Interfaith Food Pantry located at <a href="https://goo.gl/maps/wjpKMbTTbw7M8dRMA" target="_blank">2041 Station Road, Erie, PA 16510</a>. This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
         </p>
       </div>
       <div class="col-xs-12 col-md-6"> 
@@ -829,8 +832,8 @@
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Prayer Shawl</h3>
         <p>Prayer Shawls are symbolic of our unconditionally LOVING GOD. Those who receive a shawl are UPLIFTED and affirmed, as if given wings to fly above their troubles. Whether a shawl or blanket, each is made with love, PRAYING HANDS and caring hearts.</p>
-        <a href="#about" class="btn btn-custom btn-lg page-scroll">Request a Prayer Shawl</a>
-        <a href="#about" class="btn btn-custom btn-lg page-scroll">Help Knit</a>
+        <div style="text-align: center;"><a href="#about" class="btn btn-custom btn-lg page-scroll">Request a Prayer Shawl</a>
+        <a href="#about" class="btn btn-custom btn-lg page-scroll">Help Knit</a></div>
       </div>
       <div class="col-xs-12 col-md-6"> 
         <img id="about-img" src="img/uploads/3.jpeg" class="img-responsive" alt=""> 
