--- a/index.html
+++ b/index.html
@@ -246,6 +246,16 @@
   </div>
 </div>
 
+<div id="get-touch">
+  <div class="container" style="justify-content: center;text-align: center;">
+    <div class="row" style="text-align: center;">
+      <div style="text-align: center" class="col-xs-12 col-md-12 col-lg-12">
+        <h2 style="color:white">Miss our Live Stream?</h2>
+        <img style="width:250px" src="img/uploads/watch-on-youtube.png">
+      </div>
+    </div>
+  </div>
+</div>
 
 <div id="about" style="background-color: white">
   <div class="container">
@@ -832,8 +842,10 @@
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Prayer Shawl</h3>
         <p>Prayer Shawls are symbolic of our unconditionally LOVING GOD. Those who receive a shawl are UPLIFTED and affirmed, as if given wings to fly above their troubles. Whether a shawl or blanket, each is made with love, PRAYING HANDS and caring hearts.</p>
-        <div style="text-align: center;"><a href="#about" class="btn btn-custom btn-lg page-scroll">Request a Prayer Shawl</a>
-        <a href="#about" class="btn btn-custom btn-lg page-scroll">Help Knit</a></div>
+        <div style="text-align: center;">
+          <a style="margin:10px;" href="#about" class="btn btn-custom btn-lg page-scroll">Request a Prayer Shawl</a>
+          <a style="margin:10px;" href="#about" class="btn btn-custom btn-lg page-scroll">Help Knit</a>
+        </div>
       </div>
       <div class="col-xs-12 col-md-6"> 
         <img id="about-img" src="img/uploads/3.jpeg" class="img-responsive" alt=""> 
@@ -886,6 +898,16 @@
   </div>
 </div>
 
+<div id="get-touch">
+  <div class="container" style="justify-content: center;text-align: center;">
+    <div class="row" style="text-align: center;">
+      <div style="text-align: center" class="col-xs-12 col-md-12 col-lg-12">
+        <h2 style="color:white">Miss our Live Stream?</h2>
+        <img style="width:250px" src="img/uploads/watch-on-youtube.png">
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
