--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="row" style="text-align: center;">
       <div style="text-align: center" class="col-xs-12 col-md-12 col-lg-12">
         <h2 style="color:white">Miss our Live Stream?</h2>
-        <img style="width:250px" src="img/uploads/watch-on-youtube.png">
+        <a target="_blank" href="https://www.youtube.com/channel/UCWWO4zkvw4zjN3BUjgjXq2Q"><img style="width:250px" src="img/uploads/watch-on-youtube.png"></a>
       </div>
     </div>
   </div>
@@ -903,7 +903,7 @@
     <div class="row" style="text-align: center;">
       <div style="text-align: center" class="col-xs-12 col-md-12 col-lg-12">
         <h2 style="color:white">Miss our Live Stream?</h2>
-        <img style="width:250px" src="img/uploads/watch-on-youtube.png">
+        <a target="_blank" href="https://www.youtube.com/channel/UCWWO4zkvw4zjN3BUjgjXq2Q"><img style="width:250px" src="img/uploads/watch-on-youtube.png"></a>
       </div>
     </div>
   </div>
